# newsletter

./: Cargo.toml  Dockerfile  spec.yaml  sqlx-data.json
.cargo/: audit.toml
.github/workflows/: general.yaml  general.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20220512155011_create_subscriptions_table.sql  20220523082049_create_subscription_tokens_table.sql  20220613054553_seed_user.sql  20220626091017_create_newsletter_issues_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  mod.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  logout.rs  mod.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
