[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4.0.1"
chrono = "0.4.19"
config = { version = "0.13.1", default-features = false, features = ["yaml"] }
env_logger = "0.9.0"
serde = "1.0.137"
sqlx = { version = "0.5.5", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.34", features = ["log"] }
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
reqwest = "0.11.10"
