[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4.0.1"
chrono = "0.4.19"
config = { version = "0.13.1", default-features = false, features = ["yaml"] }
once_cell = "1.10.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = "1.0.137"
serde-aux = "3.0.1"
sqlx = { version = "0.5.5", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.34", features = ["log"] }
tracing-actix-web = "0.5.1"
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
unicode-segmentation = "1.9.0"
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
reqwest = "0.11.10"
